--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_riverpod: ^2.5.1
+  font_awesome_flutter: ^10.7.0
+  flutter_svg: ^2.0.9
+  gap: ^3.0.1
+  google_fonts: ^4.0.4
+  go_router: 6.0.2
+  camera: ^0.11.0+1
+  permission_handler: 10.2.0
+  gallery_saver: 2.3.2
+  image_picker: 0.8.6+1
+  flex_color_scheme: ^7.3.1
+  shared_preferences: ^2.2.3
+  firebase_core: ^3.1.1
+  firebase_auth: ^5.1.1
+  cloud_firestore: ^5.0.2
+  firebase_storage: ^12.1.0
 
 dev_dependencies:
   flutter_test:
@@ -45,18 +61,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-  font_awesome_flutter: ^10.7.0
-  flutter_svg: ^2.0.9
-  gap: ^3.0.1
-  flutter_riverpod: ^2.5.1
-  google_fonts: ^4.0.4
-  go_router: 6.0.2
-  camera: ^0.11.0+1
-  permission_handler: 10.2.0
-  gallery_saver: 2.3.2
-  image_picker: 0.8.6+1
-  flex_color_scheme: ^7.3.1
-  shared_preferences: ^2.2.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
