--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_auth: ^5.1.1
   cloud_firestore: ^5.0.2
   firebase_storage: ^12.1.0
+  animated_emoji: ^3.1.0
 
 dev_dependencies:
   flutter_test:
