--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   cloud_firestore: ^5.0.2
   firebase_storage: ^12.1.0
   animated_emoji: ^3.1.0
+  timeago_flutter: ^3.7.0
+  timeago: ^3.7.0
 
 dev_dependencies:
   flutter_test:
