--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   animated_emoji: ^3.1.0
   timeago_flutter: ^3.7.0
   timeago: ^3.7.0
+  auto_animated: ^3.2.0
+  flutter_animate: ^4.5.0
+  flutter_staggered_animations: ^1.1.1
+  lottie: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -76,8 +80,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/lotties/Animation - 1720930898657.json
+    - assets/images/nomad.svg
+    # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
